# libgetoptnano

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.c
include/: getoptnano.h
src/: libgetoptnano.c
